# django-celery

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.docker/: start-app.sh
django_celery/: celery.py  settings.py  urls.py
