
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Luiz Carlos", email = "argentinaluiz@gmail.com"},
]
dependencies = [
    "django>=4.2.1",
    "django-celery-results>=2.5.1",
    "sqlalchemy==1.4.48",
    "django-celery-beat>=2.5.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.3.1",
    "pytest-django>=4.5.2",
]
